# Experiment

./: policy-gradient-objectives.md
state-ratio-experiment/: .gitignore  Dockerfile  README.md  docker-run.sh  notes.md  pyproject.toml  run_all.sh  setup.sh  state_corrected_loss.py
state-ratio-experiment/scripts/: prepare_data.sh  preprocess_gsm8k.py  preprocess_math.py  run_ablation_k.sh  run_grpo_baseline.sh  run_gspo_baseline.sh  run_state_corrected.sh
state-ratio-experiment/tests/: test_state_corrected_loss.py
