[project]
name = "state-ratio-experiment"
version = "0.1.0"
description = "State-Corrected GRPO: Recovering the state distribution ratio via deterministic transitions"
requires-python = ">=3.10,<3.11"
dependencies = [
    # ---------------------------------------------------------------
    # Versions aligned with Docker image:
    #   verlai/verl:base-verl0.6-cu128-cudnn9.8-torch2.8.0-fa2.7.4
    # All deps managed by uv — no Docker required.
    # ---------------------------------------------------------------

    # Core framework
    "torch==2.8.0",
    "verl==0.6.1",

    # vllm 0.10.2 is the first stable release that requires torch==2.8.0
    "vllm==0.10.2",

    # vllm 0.10.2 requires transformers>=4.55.2
    "transformers>=4.55.2",

    # flash-attn: source-only build, needs torch at build time (see [tool.uv])
    "flash-attn==2.7.4.post1",

    # verl 0.6.1 constraints
    "numpy<2.0.0",
    "tensordict>=0.8.0,<=0.10.0,!=0.9.0",
    "datasets",
]

[project.optional-dependencies]
test = [
    "pytest",
]

# flash-attn's setup.py imports torch but doesn't declare it as a build dep;
# tell uv to make torch available during the build.
[tool.uv]
extra-build-dependencies = { flash-attn = ["torch==2.8.0"] }

[[tool.uv.index]]
url = "https://mirrors.cloud.tencent.com/pypi/simple"
name = "tencent"
default = true