[project]
name = "state-ratio-experiment"
version = "0.1.0"
description = "State-Corrected GRPO: Recovering the state distribution ratio via deterministic transitions"
requires-python = ">=3.10,<3.11"
dependencies = [
    # ---------------------------------------------------------------
    # Versions downgraded to be compatible with:
    #   NVIDIA Driver 535  →  max CUDA runtime 12.2
    #   Using PyTorch cu121 builds (CUDA 12.1 compat with Driver 535)
    # ---------------------------------------------------------------

    # Core framework  (cu121 wheel resolved via [tool.uv.index])
    "torch==2.5.1",
    "verl==0.5.0",

    # vllm 0.6.6.post1 is the last stable release for torch 2.5.x
    "vllm==0.6.6.post1",

    # transformers compatible with verl 0.5.0
    "transformers==4.48.2",

    # flash-attn: source-only build, needs torch at build time (see [tool.uv])
    "flash-attn==2.7.4.post1",

    # verl 0.5.0 constraints
    "numpy<2.0.0",
    "tensordict>=0.8.0,<=0.9.1,!=0.9.0",
    "datasets",
]

[project.optional-dependencies]
test = [
    "pytest",
]

# flash-attn's setup.py imports torch but doesn't declare it as a build dep;
# tell uv to make torch available during the build.
[tool.uv]
# Only resolve for Linux (verl / vllm / flash-attn have no macOS wheels)
environments = ["sys_platform == 'linux'"]
extra-build-dependencies = { flash-attn = ["torch==2.5.1"] }

[[tool.uv.index]]
url = "https://mirrors.cloud.tencent.com/pypi/simple"
name = "tencent"
default = true

# PyTorch cu121 wheel index
[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"
name = "pytorch-cu121"