[project]
name = "state-ratio-experiment"
version = "0.1.0"
description = "State-Corrected GRPO: Recovering the state distribution ratio via deterministic transitions"
requires-python = ">=3.10,<3.13"
dependencies = [
    # ---------------------------------------------------------------
    # Versions selected for:
    #   Docker CUDA 12.8 + 2× H100 80GB
    #   PyTorch cu124 builds (CUDA 12.4 compat, forward-compatible with 12.8)
    # ---------------------------------------------------------------

    # Core framework  (cu124 wheel resolved via [tool.uv.index])
    "torch==2.6.0",
    "verl>=0.7.1",

    # vllm 0.8.x is bundled in the base Docker image (verlai/verl:vllm018.dev1)
    "vllm>=0.8.0",

    # transformers compatible with verl 0.7.x + vllm 0.8.x
    "transformers>=4.48.0",

    # flash-attn: source-only build, needs torch at build time (see [tool.uv])
    "flash-attn>=2.7.0",

    # verl 0.7.x constraints
    "numpy<2.0.0",
    "tensordict>=0.8.0,<=0.10.0,!=0.9.0",
    "datasets",
]

[project.optional-dependencies]
test = [
    "pytest",
]

# flash-attn's setup.py imports torch but doesn't declare it as a build dep;
# tell uv to make torch available during the build.
[tool.uv]
# Only resolve for Linux (verl / vllm / flash-attn have no macOS wheels)
environments = ["sys_platform == 'linux'"]
extra-build-dependencies = { flash-attn = ["torch==2.6.0", "packaging", "wheel"] }

[[tool.uv.index]]
url = "https://mirrors.cloud.tencent.com/pypi/simple"
name = "tencent"
default = true

# PyTorch cu124 wheel index (CUDA 12.4, forward-compatible with CUDA 12.8)
[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"
name = "pytorch-cu124"